<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first"
            android:icon="@drawable/ic_one"
            android:title="@string/fragment_first" />
        <item
            android:id="@+id/nav_second"
            android:icon="@drawable/ic_two"
            android:title="@string/fragment_second" />
        <item
            android:id="@+id/nav_third"
            android:icon="@drawable/ic_three"
            android:title="@string/fragment_third" />
        <item
            android:id="@+id/nav_fourth"
            android:icon="@drawable/ic_four"
            android:title="@string/fragment_fourth" />
        <item
            android:id="@+id/nav_fifth"
            android:icon="@drawable/ic_five"
            android:title="@string/fragment_fifth" />
    </group>
</menu>