<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMenu">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/section_one"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/first_section_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <TextView
                        android:layout_margin="10dp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/fragment_first"
                        android:textColor="@color/white" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/section_two"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/second_section_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <TextView
                        android:layout_margin="10dp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/fragment_second"
                        android:textColor="@color/white" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/section_three"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/third_section_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <TextView
                        android:layout_margin="10dp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/fragment_third"
                        android:textColor="@color/white" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/section_four"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/fourth_section_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <TextView
                        android:layout_margin="10dp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/fragment_fourth"
                        android:textColor="@color/white" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/section_five"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_margin="15dp">

                    <ImageView
                        android:id="@+id/fifth_section_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient"
                        android:scaleType="centerCrop"
                        android:src="@mipmap/ic_launcher" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <TextView
                        android:layout_margin="10dp"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/fragment_fifth"
                        android:textColor="@color/white" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>